SET (libmoor_SOURCES
  compressor.cpp
)

ADD_LIBRARY (moor SHARED ${libmoor_SOURCES})

FIND_PACKAGE(LibArchive)
INCLUDE_DIRECTORIES(${LIBARCHIVE_INCLUDE_DIR})
LIST(APPEND ADDITIONAL_LIBS ${LIBARCHIVE_LIBRARIES})

TARGET_LINK_LIBRARIES (moor ${ADDITIONAL_LIBS})
#SET_TARGET_PROPERTIES (moor PROPERTIES SOVERSION ${SOVERSION})
