SET (libmoor_SOURCES
  compressor.cpp
)

ADD_LIBRARY (moor SHARED ${libmoor_SOURCES})
SET(ADDITIONAL_LIBS "")
FIND_PACKAGE(LibArchive)
INCLUDE_DIRECTORIES(${LibArchive_INCLUDE_DIR})
LIST(APPEND ADDITIONAL_LIBS ${LibArchive_LIBRARIES})

TARGET_LINK_LIBRARIES (moor ${ADDITIONAL_LIBS})
#SET_TARGET_PROPERTIES (moor PROPERTIES SOVERSION ${SOVERSION})
