SET (libmoor_SOURCES
  archive_writer.cpp
)

ADD_LIBRARY (moor SHARED ${libmoor_SOURCES})

IF(MSVC)
    set(CMAKE_DEBUG_POSTFIX "d")
    add_definitions(-D_CRT_SECURE_NO_DEPRECATE)
    add_definitions(-D_CRT_NONSTDC_NO_DEPRECATE)
ENDIF()

SET(ADDITIONAL_LIBS "")

FIND_PACKAGE(LibArchive)
INCLUDE_DIRECTORIES(${LibArchive_INCLUDE_DIR})
LIST(APPEND ADDITIONAL_LIBS ${LibArchive_LIBRARIES})

FIND_PACKAGE(Boost COMPONENTS filesystem)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
LIST(APPEND ADDITIONAL_LIBS ${Boost_LIBRARIES})

TARGET_LINK_LIBRARIES (moor ${ADDITIONAL_LIBS})
#SET_TARGET_PROPERTIES (moor PROPERTIES SOVERSION ${SOVERSION})
