ADD_EXECUTABLE (test_compress test_compress.cpp)

IF (CMAKE_COMPILER_IS_GNUCXX)
  ADD_DEFINITIONS (-std=c++0x)
ENDIF()

INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR})
TARGET_LINK_LIBRARIES (test_compress moor_static)
TARGET_LINK_LIBRARIES (test_compress ${ADDITIONAL_LIBS})
#SET_TARGET_PROPERTIES (moor PROPERTIES SOVERSION ${SOVERSION})
