ADD_EXECUTABLE (test_compress test_compress.cpp)

IF (NOT MSVC)
  ADD_DEFINITIONS (-std=c++0x)
ELSE()
  ADD_DEFINITIONS(-DMOOR_STATIC)
ENDIF()

INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR})
TARGET_LINK_LIBRARIES (test_compress moor_static)
TARGET_LINK_LIBRARIES (test_compress ${ADDITIONAL_LIBS})
#SET_TARGET_PROPERTIES (moor PROPERTIES SOVERSION ${SOVERSION})
